Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/emr/reports/atms.xhtml
+++ b/src/main/webapp/emr/reports/atms.xhtml
@@ -31,8 +31,8 @@
                                     <h:outputText value="#{item.name}" />
                                 </p:column>
 
-                                <p:column headerText="Code" filterBy="#{item.code}" filterMatchMode="contains" sortBy="#{item.code}">
-                                    <h:outputText value="#{item.code}" />
+                                <p:column headerText="VTM" filterBy="#{item.vtm.name}" filterMatchMode="contains" sortBy="#{item.vtm.name}">
+                                    <h:outputText value="#{item.vtm.name}" />
                                 </p:column>
 
                             </p:dataTable>
