--- a/src/main/webapp/emr/reports/vmps.xhtml
+++ b/src/main/webapp/emr/reports/vmps.xhtml
@@ -54,14 +54,16 @@
                                 <p:column headerText="Pack Unit" filterBy="#{vmp.packUnit.name}" filterMatchMode="contains">
                                     #{vmp.packUnit.name}
                                 </p:column>
-                                <p:column headerText="Minimum Issue Quantity" filterBy="#{vmp.minimumIssueQuentity}" filterMatchMode="contains">
-                                    #{vmp.minimumIssueQuentity}
+                                <p:column headerText="Minimum Issue Quantity" filterBy="#{vmp.minimumIssueQuantity}" filterMatchMode="contains">
+                                    #{vmp.minimumIssueQuantity}
                                 </p:column>
-                                <p:column headerText="Minimum Issue Unit" filterBy="#{vmp.minimumIssueQuentityUnit.name}" filterMatchMode="contains">
-                                    #{vmp.minimumIssueQuentityUnit.name}
+                                <p:column headerText="Minimum Issue Unit" 
+                                          filterBy="#{vmp.minimumIssueQuantityUnit.name}" 
+                                          filterMatchMode="contains">
+                                    #{vmp.minimumIssueQuantityUnit.name}
                                 </p:column>
-                                <p:column headerText="Issue Multiplies Quantity" filterBy="#{vmp.issueMultipliesQuentity}" filterMatchMode="contains">
-                                    #{vmp.issueMultipliesQuentity}
+                                <p:column headerText="Issue Multiplies Quantity" filterBy="#{vmp.issueMultipliesQuantity}" filterMatchMode="contains">
+                                    #{vmp.issueMultipliesQuantity}
                                 </p:column>
                                 <p:column headerText="Issue Multiplies Unit" filterBy="#{vmp.issueMultipliesUnit.name}" filterMatchMode="contains">
                                     #{vmp.issueMultipliesUnit.name}
