--- a/src/main/webapp/emr/setup/upload_atms.xhtml
+++ b/src/main/webapp/emr/setup/upload_atms.xhtml
@@ -24,6 +24,8 @@
                                                  ajax="false"/>
                             </h:form>
 
+                            <p>#{dataUploadBean.outputString}</p>
+                            
                             <table class="table">
                                 <thead>
                                     <tr>
