--- a/src/main/webapp/emr/setup/upload_amps.xhtml
+++ b/src/main/webapp/emr/setup/upload_amps.xhtml
@@ -36,17 +36,37 @@
                                     <tr>
                                         <td>1</td>
                                         <td>ID</td>
-                                        <td>Unique patient identifier. Optional.</td>
+                                        <td>Unique identifier. Optional.</td>
                                     </tr>
                                     <tr>
                                         <td>2</td>
+                                        <td>AMP</td>
+                                        <td>AMP name. (Trade Name) Required.</td>
+                                    </tr>
+                                     <tr>
+                                        <td>3</td>
+                                        <td>Code</td>
+                                        <td>Code</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
                                         <td>ATM</td>
-                                        <td>ATM name. (Trade Name) Required.</td>
+                                        <td>ATM name. (Generic Name) Required.</td>
+                                    </tr>
+                                     <tr>
+                                        <td>3</td>
+                                        <td>VMP</td>
+                                        <td>VMP name. (Generic Name) Required.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2</td>
+                                        <td>Manufacturer</td>
+                                        <td>Manufacturer. Optional.</td>
                                     </tr>
                                     <tr>
                                         <td>3</td>
-                                        <td>VTM</td>
-                                        <td>VTM name. (Generic Name) Required.</td>
+                                        <td>Importer</td>
+                                        <td>Importer. Optional.</td>
                                     </tr>
                                 </tbody>
                             </table>
