--- a/src/main/webapp/emr/admin/upload_vmps.xhtml
+++ b/src/main/webapp/emr/admin/upload_vmps.xhtml
@@ -7,8 +7,8 @@
     <h:head>
     </h:head>
     <h:body>
-        <ui:composition template="/resources/template/template.xhtml">
-            <ui:define name="content">
+      <ui:composition template="/emr/admin/index.xhtml">
+            <ui:define name="subcontent">
 
                 <div class="container-fluid" >
                     <div class="card" >
