--- a/src/main/webapp/resources/ezcomp/menu.xhtml
+++ b/src/main/webapp/resources/ezcomp/menu.xhtml
@@ -675,7 +675,7 @@
                     <p:menuitem ajax="false" action="#{emrController.navigateToClinicalQueue()}" value="Queue"/>
                     <p:menuitem ajax="false" action="#{emrController.navigateToClinicalReportsIndex()}" value="Reports"/>
                     <p:menuitem ajax="false" action="#{emrController.navigateToClinicalFavouriteIndex()}" value="Favourites"/>
-                    <p:menuitem ajax="false" action="#{emrController.navigateToClinicalAdministration()}" value="Administration"/>
+                    <p:menuitem ajax="false" action="#{emrController.navigateToEmrAdmin()}" value="Administration"/>
 
 
                 </p:submenu>
