Closes #502 Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/clinical/patient_profile.xhtml
+++ b/src/main/webapp/clinical/patient_profile.xhtml
@@ -179,7 +179,7 @@
                                                  var="pe"
                                                  >
                                         <p:column headerText="Visit Date" >
-                                            <h:outputLabel value="#{pe.dateTime}" >
+                                            <h:outputLabel value="#{pe.encounterDate}" >
                                                 <f:convertDateTime pattern="dd MMMM yyyy - hh:mm a" ></f:convertDateTime>
                                             </h:outputLabel>
                                         </p:column>
