Errors with ObjectDB

--- a/src/main/webapp/bill_summery.xhtml
+++ b/src/main/webapp/bill_summery.xhtml
@@ -211,6 +211,10 @@
                                                         itemValue="#{ix}" size="30" disabled="#{billSearch.billSearch.paymentMethod ne 'Credit'}">  
                                         </p:autoComplete>
 
+                                        <h:outputLabel value="Comments : " ></h:outputLabel>
+                                        <h:outputLabel value="#{billSearch.billSearch.comments}" ></h:outputLabel>
+                                       
+                                        
                                         <h:outputLabel value="Payment Type : " ></h:outputLabel>
                                         <h:outputLabel value="#{billSearch.billSearch.paymentMethod}" ></h:outputLabel>
                                         <h:outputLabel value="Payment Type : " ></h:outputLabel>
