Closes #504 Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/user_preferances.xhtml
+++ b/src/main/webapp/user_preferances.xhtml
@@ -33,6 +33,7 @@
                                 </p:selectOneMenu>
                             </h:panelGrid>
 
+                            <h1>#{sessionController.primeTheme}</h1>
 
 
 
